@@ -75,7 +75,8 @@ public class UpdateShardHandler implements SolrInfoBean {
 
   private final Http2SolrClient updateOnlyClient;
 
-  private final CloseableHttpClient recoveryOnlyClient;
+  // private final CloseableHttpClient recoveryOnlyClient;
+  private final Http2SolrClient recoveryOnlyClient;
 
   private final CloseableHttpClient defaultClient;
 
@@ -86,6 +87,8 @@ public class UpdateShardHandler implements SolrInfoBean {
   private final InstrumentedHttpRequestExecutor httpRequestExecutor;
 
   private final InstrumentedHttpListenerFactory updateHttpListenerFactory;
+
+  private final InstrumentedHttpListenerFactory recoverHttpListenerFactory;
 
   private SolrMetricsContext solrMetricsContext;
 
@@ -121,9 +124,8 @@ public class UpdateShardHandler implements SolrInfoBean {
 
     httpRequestExecutor = new InstrumentedHttpRequestExecutor(getMetricNameStrategy(cfg));
     updateHttpListenerFactory = new InstrumentedHttpListenerFactory(getNameStrategy(cfg));
-    recoveryOnlyClient =
-        HttpClientUtil.createClient(
-            clientParams, recoveryOnlyConnectionManager, false, httpRequestExecutor);
+    recoverHttpListenerFactory = new InstrumentedHttpListenerFactory(getNameStrategy(cfg));
+
     defaultClient =
         HttpClientUtil.createClient(
             clientParams, defaultConnectionManager, false, httpRequestExecutor);
@@ -133,15 +135,24 @@ public class UpdateShardHandler implements SolrInfoBean {
             DistributedUpdateProcessor.DISTRIB_FROM,
             DistributingUpdateProcessorFactory.DISTRIB_UPDATE_PARAM);
     Http2SolrClient.Builder updateOnlyClientBuilder = new Http2SolrClient.Builder();
+    Http2SolrClient.Builder recoveryOnlyClientBuilder = new Http2SolrClient.Builder();
     if (cfg != null) {
       updateOnlyClientBuilder
           .withConnectionTimeout(cfg.getDistributedConnectionTimeout(), TimeUnit.MILLISECONDS)
           .withIdleTimeout(cfg.getDistributedSocketTimeout(), TimeUnit.MILLISECONDS)
           .withMaxConnectionsPerHost(cfg.getMaxUpdateConnectionsPerHost());
+      recoveryOnlyClientBuilder
+          .withConnectionTimeout(cfg.getDistributedConnectionTimeout(), TimeUnit.MILLISECONDS)
+          .withIdleTimeout(cfg.getDistributedSocketTimeout(), TimeUnit.MILLISECONDS)
+          .withMaxConnectionsPerHost(cfg.getMaxUpdateConnectionsPerHost());
     }
+
     updateOnlyClientBuilder.withTheseParamNamesInTheUrl(urlParamNames);
     updateOnlyClient = updateOnlyClientBuilder.build();
     updateOnlyClient.addListenerFactory(updateHttpListenerFactory);
+
+    recoveryOnlyClient = recoveryOnlyClientBuilder.build();
+    recoveryOnlyClient.addListenerFactory(recoverHttpListenerFactory);
 
     ThreadFactory recoveryThreadFactory = new SolrNamedThreadFactory("recoveryExecutor");
     if (cfg != null && cfg.getMaxRecoveryThreads() > 0) {
@@ -247,7 +258,7 @@ public class UpdateShardHandler implements SolrInfoBean {
   }
 
   // don't introduce a bug, this client is for recovery ops only!
-  public HttpClient getRecoveryOnlyHttpClient() {
+  public Http2SolrClient getRecoveryOnlyHttpClient() {
     return recoveryOnlyClient;
   }
 
@@ -290,7 +301,7 @@ public class UpdateShardHandler implements SolrInfoBean {
         // do nothing
       }
       IOUtils.closeQuietly(updateOnlyClient);
-      HttpClientUtil.close(recoveryOnlyClient);
+      IOUtils.closeQuietly(recoveryOnlyClient);
       HttpClientUtil.close(defaultClient);
       defaultConnectionManager.close();
       recoveryOnlyConnectionManager.close();
